Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSfAJPgrcP6voaR8Hv6rJc",
+      "authorship_tag": "ABX9TyPlebc++5CBzWmsB6NU1MXx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4684,10 +4684,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7_ci617st4bU",
-        "outputId": "e5d7f60e-dec5-4953-b656-faf6a5bf7594",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5d7f60e-dec5-4953-b656-faf6a5bf7594"
       },
       "source": [
         "%%writefile passbyreference.cpp\n",
@@ -4716,7 +4716,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4731,15 +4731,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "LEzCoNq7t_vZ",
-        "outputId": "f75979ee-bda0-49c4-e26f-e660afd699a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f75979ee-bda0-49c4-e26f-e660afd699a9"
       },
       "source": [
         "!g++ passbyreference.cpp -o passbyreference; ./passbyreference"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4757,10 +4757,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "uloCDtwrumZA",
-        "outputId": "16d411bd-bf41-40c4-dad0-9e13e4340342",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "16d411bd-bf41-40c4-dad0-9e13e4340342"
       },
       "source": [
         "%%writefile functionoverloading.cpp\n",
@@ -4784,7 +4784,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4799,15 +4799,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "ngMHKqjLuoig",
-        "outputId": "dd7ec08c-21f3-43a2-b3f5-5a09711919a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd7ec08c-21f3-43a2-b3f5-5a09711919a5"
       },
       "source": [
         "!g++ functionoverloading.cpp -o functionoverloading; ./functionoverloading"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4826,6 +4826,341 @@
       },
       "source": [
         "# クラス Class\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2trXCKKNIoog",
+        "outputId": "f6b424f3-441c-4d64-dce7-3553679447e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile object01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {       // The class\n",
+        "  public:             // Access specifier\n",
+        "    int myNum;        // Attribute (int variable)\n",
+        "    string myString;  // Attribute (string variable)\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;  // Create an object of MyClass\n",
+        "\n",
+        "  // Access attributes and set values\n",
+        "  myObj.myNum = 15;\n",
+        "  myObj.myString = \"Some text\";\n",
+        "\n",
+        "  // Print values\n",
+        "  cout << myObj.myNum << \"\\n\"; \n",
+        "  cout << myObj.myString; \n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing object01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yPV_rnnII6h4",
+        "outputId": "e0a7080f-3b60-4da5-ffc1-c43ce020421f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ object01.cpp -o object01; ./object01"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "Some text"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SL2JLGn2JGAI",
+        "outputId": "65bd7c4b-f907-4867-aaba-e89c7160f077",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile object02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "class Car {\n",
+        "  public:\n",
+        "    string brand;\n",
+        "    string model;\n",
+        "    int year;\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  Car carObj1;\n",
+        "  carObj1.brand = \"BMW\";\n",
+        "  carObj1.model = \"X5\";\n",
+        "  carObj1.year = 1999;\n",
+        "\n",
+        "  Car carObj2;\n",
+        "  carObj2.brand = \"Ford\";\n",
+        "  carObj2.model = \"Mustang\";\n",
+        "  carObj2.year = 1969;\n",
+        "\n",
+        "  cout << carObj1.brand << \" \" << carObj1.model << \" \" << carObj1.year << \"\\n\";\n",
+        "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << \"\\n\";\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing object02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gsTqn1uXJFc7",
+        "outputId": "58376ce0-9c81-4bb0-ca98-ccdf4ed4218a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ object02.cpp -o object02; ./object02"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t5ziGTEKJYdX",
+        "outputId": "d981aaf2-3baa-43aa-b4ff-480258ea17e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile method01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {         // The class\n",
+        "  public:               // Access specifier\n",
+        "    void myMethod() {   // Method/function\n",
+        "      cout << \"Hello World!\";\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;     // Create an object of MyClass\n",
+        "  myObj.myMethod();  // Call the method\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing method01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kO8LjkheJYGQ",
+        "outputId": "029bf326-ee36-49bb-c116-65a4e4afd3a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ method01.cpp -o method01; ./method01"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FdehYAOxJ9hn",
+        "outputId": "3b8c007c-6af8-4fd4-9805-5b73bde21f4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile method02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {         // The class\n",
+        "  public:               // Access specifier\n",
+        "    void myMethod();    // Method/function declaration\n",
+        "};\n",
+        "\n",
+        "// Method/function definition outside the class\n",
+        "void MyClass::myMethod() {\n",
+        "  cout << \"Hello World!\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;     // Create an object of MyClass\n",
+        "  myObj.myMethod();  // Call the method\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting method02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hQWeWer7J9Xc",
+        "outputId": "b89b8b1c-b9b3-464c-dd34-49ce79907573",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ method02.cpp -o method02; ./method02"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PYdljvoqKlUH",
+        "outputId": "67750e8e-06ca-462c-dac8-9bb37893d18f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile method03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class Car {\n",
+        "  public:\n",
+        "    int speed(int maxSpeed);\n",
+        "};\n",
+        "\n",
+        "int Car::speed(int maxSpeed) {\n",
+        "  return maxSpeed;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  Car myObj;\n",
+        "  cout << myObj.speed(200);\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing method03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uyOTylWeKlLo",
+        "outputId": "6c40512c-e3b6-4a85-cf34-45d739f92680",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ method03.cpp -o method03; ./method03"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "200"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
