Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPlebc++5CBzWmsB6NU1MXx",
+      "authorship_tag": "ABX9TyPs0VTYbRuI9asmKUMFMrq6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4832,10 +4832,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2trXCKKNIoog",
-        "outputId": "f6b424f3-441c-4d64-dce7-3553679447e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f6b424f3-441c-4d64-dce7-3553679447e7"
       },
       "source": [
         "%%writefile object01.cpp\n",
@@ -4863,7 +4863,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4878,15 +4878,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "yPV_rnnII6h4",
-        "outputId": "e0a7080f-3b60-4da5-ffc1-c43ce020421f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e0a7080f-3b60-4da5-ffc1-c43ce020421f"
       },
       "source": [
         "!g++ object01.cpp -o object01; ./object01"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4902,10 +4902,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SL2JLGn2JGAI",
-        "outputId": "65bd7c4b-f907-4867-aaba-e89c7160f077",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65bd7c4b-f907-4867-aaba-e89c7160f077"
       },
       "source": [
         "%%writefile object02.cpp\n",
@@ -4937,7 +4937,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4952,15 +4952,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "gsTqn1uXJFc7",
-        "outputId": "58376ce0-9c81-4bb0-ca98-ccdf4ed4218a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "58376ce0-9c81-4bb0-ca98-ccdf4ed4218a"
       },
       "source": [
         "!g++ object02.cpp -o object02; ./object02"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4976,10 +4976,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "t5ziGTEKJYdX",
-        "outputId": "d981aaf2-3baa-43aa-b4ff-480258ea17e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d981aaf2-3baa-43aa-b4ff-480258ea17e9"
       },
       "source": [
         "%%writefile method01.cpp\n",
@@ -5000,7 +5000,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5015,15 +5015,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "kO8LjkheJYGQ",
-        "outputId": "029bf326-ee36-49bb-c116-65a4e4afd3a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "029bf326-ee36-49bb-c116-65a4e4afd3a4"
       },
       "source": [
         "!g++ method01.cpp -o method01; ./method01"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5038,10 +5038,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FdehYAOxJ9hn",
-        "outputId": "3b8c007c-6af8-4fd4-9805-5b73bde21f4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b8c007c-6af8-4fd4-9805-5b73bde21f4c"
       },
       "source": [
         "%%writefile method02.cpp\n",
@@ -5065,7 +5065,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5080,15 +5080,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "hQWeWer7J9Xc",
-        "outputId": "b89b8b1c-b9b3-464c-dd34-49ce79907573",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b89b8b1c-b9b3-464c-dd34-49ce79907573"
       },
       "source": [
         "!g++ method02.cpp -o method02; ./method02"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5103,10 +5103,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PYdljvoqKlUH",
-        "outputId": "67750e8e-06ca-462c-dac8-9bb37893d18f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "67750e8e-06ca-462c-dac8-9bb37893d18f"
       },
       "source": [
         "%%writefile method03.cpp\n",
@@ -5129,7 +5129,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5144,20 +5144,332 @@
       "cell_type": "code",
       "metadata": {
         "id": "uyOTylWeKlLo",
-        "outputId": "6c40512c-e3b6-4a85-cf34-45d739f92680",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6c40512c-e3b6-4a85-cf34-45d739f92680"
       },
       "source": [
         "!g++ method03.cpp -o method03; ./method03"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "200"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yPnon0NEGpBA",
+        "outputId": "1b105521-87f9-4c96-f58d-4c9e3ece4bd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile constructor01.cpp\n",
+        "\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {     // The class\n",
+        "  public:           // Access specifier\n",
+        "    MyClass() {     // Constructor\n",
+        "      cout << \"Hello World!\";\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;    // Create an object of MyClass (this will call the constructor)\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing constructor01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4H6uhhuNGozO",
+        "outputId": "e6e1c96d-08ee-412b-f73a-759b547bf8b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ constructor01.cpp -o constructor01; ./constructor01"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QjkuRZ3DHE8U",
+        "outputId": "f0d2480a-376a-460b-ccce-576f0488e507",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile constructor02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class Car {        // The class\n",
+        "  public:          // Access specifier\n",
+        "    string brand;  // Attribute\n",
+        "    string model;  // Attribute\n",
+        "    int year;      // Attribute\n",
+        "    Car(string x, string y, int z) {  // Constructor with parameters\n",
+        "      brand = x;\n",
+        "      model = y;\n",
+        "      year = z;\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  // Create Car objects and call the constructor with different values\n",
+        "  Car carObj1(\"BMW\", \"X5\", 1999);\n",
+        "  Car carObj2(\"Ford\", \"Mustang\", 1969);\n",
+        "\n",
+        "  // Print values\n",
+        "  cout << carObj1.brand << \" \" << carObj1.model << \" \" << carObj1.year << \"\\n\";\n",
+        "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << \"\\n\";\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing constructor02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r7BS44sTHEzk",
+        "outputId": "74eddcaa-568c-4e37-e22f-a7d95d1f25c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ constructor02.cpp -o constructor02; ./constructor02"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sAWgqgADHg47",
+        "outputId": "64cb7ee1-1416-4f2c-83dc-2218d3b9c50e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile constructor03.cpp\n",
+        "\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class Car {        // The class\n",
+        "  public:          // Access specifier\n",
+        "    string brand;  // Attribute\n",
+        "    string model;  // Attribute\n",
+        "    int year;      // Attribute\n",
+        "    Car(string x, string y, int z); // Constructor declaration\n",
+        "};\n",
+        "\n",
+        "// Constructor definition outside the class\n",
+        "Car::Car(string x, string y, int z) {\n",
+        "  brand = x;\n",
+        "  model = y;\n",
+        "  year = z;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  // Create Car objects and call the constructor with different values\n",
+        "  Car carObj1(\"BMW\", \"X5\", 1999);\n",
+        "  Car carObj2(\"Ford\", \"Mustang\", 1969);\n",
+        "\n",
+        "  // Print values\n",
+        "  cout << carObj1.brand << \" \" << carObj1.model << \" \" << carObj1.year << \"\\n\";\n",
+        "  cout << carObj2.brand << \" \" << carObj2.model << \" \" << carObj2.year << \"\\n\";\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing constructor03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-JagdTUNHg0f",
+        "outputId": "38f76247-7d54-4f36-f4ad-2aab7082a50c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ constructor03.cpp -o constructor03; ./constructor03\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wwPyr_ITH90I"
+      },
+      "source": [
+        "%%script false\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {\n",
+        "  public:    // Public access specifier\n",
+        "    int x;   // Public attribute\n",
+        "  private:   // Private access specifier\n",
+        "    int y;   // Private attribute\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;\n",
+        "  myObj.x = 25;  // Allowed (x is public)\n",
+        "  myObj.y = 50;  // Not allowed (y is private)\n",
+        "  return 0;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "# In function 'int main()':\n",
+        "# Line 8: error: 'int MyClass::y' is private\n",
+        "# Line 14: error: within this context"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LfIOgkyZInao",
+        "outputId": "de4d2a69-2d6e-4830-965f-f21dd9272c22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile accessspecifier.cpp\n",
+        "\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "class MyClass {   // The class\n",
+        "  public:         // Public access specifier\n",
+        "    int x;        // Public attribute (int variable)\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  MyClass myObj;  // Create an object of MyClass\n",
+        "\n",
+        "  // Access attributes and set values\n",
+        "  myObj.x = 15;\n",
+        "\n",
+        "  // Print values\n",
+        "  cout << myObj.x; \n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing accessspecifier.cpp\n",
+            "Overwriting accessspecifier.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oiG0RSZjInHS",
+        "outputId": "fe2ccca7-5391-4861-8f42-bc488e847621",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ accessspecifier.cpp -o accessspecifier; ./accessspecifier"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15"
           ],
           "name": "stdout"
         }
