Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUjGXcPv1MNZ3J3WmxmgiY",
+      "authorship_tag": "ABX9TyMchVy3XFDlHx4s+1Jnl6qm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5479,10 +5479,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "aOru4KrJYA1S",
-        "outputId": "3913cbaa-caf9-480f-e2d9-e9b00b34e2f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3913cbaa-caf9-480f-e2d9-e9b00b34e2f3"
       },
       "source": [
         "%%writefile encapsulation01.cpp\n",
@@ -5510,7 +5510,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5525,15 +5525,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "zaolZDXrYD9V",
-        "outputId": "3289ca3f-b3e8-4c87-f6ca-b9653e5f551a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3289ca3f-b3e8-4c87-f6ca-b9653e5f551a"
       },
       "source": [
         "!g++ encapsulation01.cpp -o encapsulation01; ./encapsulation01"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5548,10 +5548,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BQ7FyXY7YqxQ",
-        "outputId": "039f8247-8382-4b5d-9a32-37f5e129e894",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "039f8247-8382-4b5d-9a32-37f5e129e894"
       },
       "source": [
         "%%writefile inheritance01.cpp\n",
@@ -5583,7 +5583,7 @@
         "}\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5598,15 +5598,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "YDeaI5uzYucL",
-        "outputId": "17f03594-c44d-45a7-9ce9-f50d79985cc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "17f03594-c44d-45a7-9ce9-f50d79985cc1"
       },
       "source": [
         "!g++ inheritance01.cpp -o inheritance01; ./inheritance01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5622,10 +5622,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "94a6-oLOZKkn",
-        "outputId": "74e690ab-73c9-48df-f002-6ee2ecdb16e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "74e690ab-73c9-48df-f002-6ee2ecdb16e9"
       },
       "source": [
         "%%writefile inheritance02.cpp\n",
@@ -5655,7 +5655,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5670,15 +5670,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jrs7Y29GZM8c",
-        "outputId": "bb57db98-c591-413f-9f41-233e86d786ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb57db98-c591-413f-9f41-233e86d786ca"
       },
       "source": [
         "!g++ inheritance02.cpp -o inheritance02; ./inheritance02"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5693,10 +5693,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8-AvRNkWZhqf",
-        "outputId": "2fc65dd6-784d-43cc-9132-9f24092f53bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fc65dd6-784d-43cc-9132-9f24092f53bc"
       },
       "source": [
         "%%writefile inheritance03.cpp\n",
@@ -5731,7 +5731,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5746,15 +5746,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "XVvEQr3-ZyGd",
-        "outputId": "5ff8701a-cd2a-4fd2-bfd6-e7e8118d9e1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5ff8701a-cd2a-4fd2-bfd6-e7e8118d9e1c"
       },
       "source": [
         "!g++ inheritance03.cpp -o inheritance03; ./inheritance03"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5770,10 +5770,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "npPHwffZaCU_",
-        "outputId": "f6ff6374-0681-4a47-b499-3c9a722944b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f6ff6374-0681-4a47-b499-3c9a722944b6"
       },
       "source": [
         "%%writefile inheritance04.cpp\n",
@@ -5808,7 +5808,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5823,21 +5823,185 @@
       "cell_type": "code",
       "metadata": {
         "id": "WUYFP1u8aIjb",
-        "outputId": "ba8d3c0f-7612-4dba-e001-3544bca3fd06",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba8d3c0f-7612-4dba-e001-3544bca3fd06"
       },
       "source": [
         "!g++ inheritance04.cpp -o inheritance04; ./inheritance04"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Salary: 50000\n",
             "Bonus: 15000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "smDbnHa3X8qp",
+        "outputId": "d9c57dc8-68fd-4b2f-fe9e-90ae6bb0a86b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile polymorphism.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "// Base class\n",
+        "class Animal {\n",
+        "  public:\n",
+        "    void animalSound() {\n",
+        "      cout << \"The animal makes a sound \\n\" ;\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "// Derived class\n",
+        "class Pig : public Animal {\n",
+        "  public:\n",
+        "    void animalSound() {\n",
+        "      cout << \"The pig says: wee wee \\n\" ;\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "// Derived class\n",
+        "class Dog : public Animal {\n",
+        "  public:\n",
+        "    void animalSound() {\n",
+        "      cout << \"The dog says: bow wow \\n\" ;\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "int main() {\n",
+        "  Animal myAnimal;\n",
+        "  Pig myPig;\n",
+        "  Dog myDog;\n",
+        "\n",
+        "  myAnimal.animalSound();\n",
+        "  myPig.animalSound();\n",
+        "  myDog.animalSound();\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing polymorphism.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YA0Yro23YB0M",
+        "outputId": "cfcd6e0a-0bb1-49d2-c9c3-6c3fa3e28ce6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ polymorphism.cpp -o polymorphism; ./polymorphism"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The animal makes a sound \n",
+            "The pig says: wee wee \n",
+            "The dog says: bow wow \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JYjXHaQCYo9B",
+        "outputId": "06107003-06ec-4da6-fe1c-e61896048d6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile file01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <fstream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "  // Create a text file\n",
+        "  ofstream MyWriteFile(\"filename.txt\");\n",
+        "\n",
+        "  // Write to the file\n",
+        "  MyWriteFile << \"Files can be tricky, but it is fun enough!\";\n",
+        " \n",
+        "  // Close the file\n",
+        "  MyWriteFile.close();\n",
+        "\n",
+        "  // Create a text string, which is used to output the text file\n",
+        "  string myText;\n",
+        "\n",
+        "  // Read from the text file\n",
+        "  ifstream MyReadFile(\"filename.txt\");\n",
+        "\n",
+        "  // Use a while loop together with the getline() function to read the file line by line\n",
+        "  while (getline (MyReadFile, myText)) {\n",
+        "    // Output the text from the file\n",
+        "    cout << myText;\n",
+        "  }\n",
+        "\n",
+        "  // Close the file\n",
+        "  MyReadFile.close();\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing file01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DusXiwvrYxVW",
+        "outputId": "8fd69c85-8a8e-4d99-af68-0221098753be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ file01.cpp -o file01; ./file01"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Files can be tricky, but it is fun enough!"
           ],
           "name": "stdout"
         }
